--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 google-cloud-bigquery==3.29.0
 google-cloud-core==2.4.1
+google-cloud-secret-manager==2.24.0
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.67.0rc1
+grpc-google-iam-v1==0.14.2
 grpcio==1.70.0
 grpcio-status==1.70.0
 httplib2==0.22.0
